🎨 📦 add time line and style dialogs

--- a/src/app/main/pages/quality/analysis/records/dialogs/assign-specialist-dialog/assign-specialist-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/records/dialogs/assign-specialist-dialog/assign-specialist-dialog.component.html
@@ -1,19 +1,17 @@
-<div class="container">
-    <div mat-dialog-title class="header">
-        <mat-icon class="header__icon">how_to_reg</mat-icon>
-        <h3 class="header__title">
-            Asignar especialista
-        </h3>
+
+<div>
+    <div class="ms-dialog-header">
+        <mat-icon class="ms-dialog-header__icon">how_to_reg</mat-icon>
+        <h3 class="ms-dialog-header__title"> Asignar especialista </h3>
         <span class="ms-fill"></span>
-      
-        <div mat-dialog-close class="header__icon-clear">
-            <mat-icon>clear</mat-icon>
-        </div>
-    </div>    
+        <button mat-icon-button mat-dialog-close>
+            <mat-icon>cancel</mat-icon>
+        </button>
+    </div>
     <mat-divider></mat-divider>
 
-    <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
     <mat-dialog-content style="margin-top: 20px;" >
+        <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
         <div>
             <form [formGroup]="specialistForm" class="timer-container">                
                
@@ -65,9 +63,9 @@
         </div>
 
     </mat-dialog-content>
-    <mat-dialog-actions align="end">
-        <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
-        <button type="button" mat-raised-button color="primary" class="footer__btn-save"
-            (click)="save()">INICIAR</button>
+
+    <mat-dialog-actions align="end">        
+        <button mat-stroked-button color="warn" mat-dialog-close [disabled]="loading$ | async">CANCELAR</button>
+        <button mat-stroked-button color="primary" (click)="save()" [disabled]="loading$ | async">INICIAR</button>
     </mat-dialog-actions>
 </div>
