--- a/src/app/main/pages/quality/configurations/configurations.component.scss
+++ b/src/app/main/pages/quality/configurations/configurations.component.scss
@@ -153,6 +153,7 @@ table {
             margin-left: 90px;
             background: #6200ee;
             color: white;
+            margin-top: 20px;
         }
     }
 
