--- a/src/app/main/pages/quality/analysis/records/dialogs/detail-internal-dialog/detail-internal-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/records/dialogs/detail-internal-dialog/detail-internal-dialog.component.html
@@ -1,19 +1,18 @@
-<div class="container">
-    <div mat-dialog-title class="header">
-        <mat-icon class="header__icon">visibility</mat-icon>
-        <h3 class="header__title">
-            Detalle evento externo
-        </h3>
+
+
+<div>
+    <div class="ms-dialog-header">
+        <mat-icon class="ms-dialog-header__icon">visibility</mat-icon>
+        <h3 class="ms-dialog-header__title"> Detalle evento externo </h3>
         <span class="ms-fill"></span>
-      
-        <div mat-dialog-close class="header__icon-clear">
-            <mat-icon>clear</mat-icon>
-        </div>
-    </div>    
+        <button mat-icon-button mat-dialog-close>
+            <mat-icon>cancel</mat-icon>
+        </button>
+    </div>
     <mat-divider></mat-divider>
 
-    <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
     <mat-dialog-content style="margin-top: 20px;" >
+    <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
         <div>
             <form [formGroup]="detailFormGroup" class="timer-container">
                 <p><span style="font-weight: bold;"> OT actual :</span> {{data.workOrder ? data.workOrder : ''}}</p>
@@ -66,7 +65,8 @@
         </div>
 
     </mat-dialog-content>
+
     <mat-dialog-actions align="end">
-        <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
+        <button mat-stroked-button color="warn" mat-dialog-close [disabled]="loading$ | async">CANCELAR</button>
     </mat-dialog-actions>
 </div>
