--- a/src/assets/css/meraki.scss
+++ b/src/assets/css/meraki.scss
@@ -99,6 +99,7 @@
 .ms-dialog-header {
     display: flex;
     align-items: stretch;
+    margin-bottom: 10PX;
 
     &__icon {
         color: #2b2b2b;
