--- a/src/app/main/pages/quality/external-events/external-events.component.html
+++ b/src/app/main/pages/quality/external-events/external-events.component.html
@@ -171,12 +171,11 @@
                             </button>                            
                         </div>                                              
                     </div>                     
-                                       
+                     <br>           
                     <button aria-label="add" mat-button class="container-form__btn-save" 
                     [disabled]='externalForm.invalid'
                     (click)="save()"
-                    >
-                        GUARDAR
+                    >   GUARDAR
                     </button>                   
     
                 </form>
