:package: :art: last features

--- a/src/app/main/pages/budgets/budgets-daily-entries/budgets-daily-entries.component.html
+++ b/src/app/main/pages/budgets/budgets-daily-entries/budgets-daily-entries.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="header-container">
         <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 2.5em;">view_day</mat-icon>
-        <h1 style="font-size: 2.2em; margin-left: 20px; font-family: 'Poppins', sans-serif; font-weight: 700;">Entrada diarea</h1>
+        <h1 style="font-size: 2.2em; margin-left: 20px; font-family: 'Poppins', sans-serif; font-weight: 700;">Entrada diaria</h1>
         <button type="file" aria-label="add" mat-button class="btn-add" (click)="uploadFile()">
             <mat-icon>add</mat-icon>
             SUBIR ARCHIVO
