--- a/src/app/main/pages/spares/improvements/dialogs/validate-dialog-improvenments/validate-dialog-improvenments.component.scss
+++ b/src/app/main/pages/spares/improvements/dialogs/validate-dialog-improvenments/validate-dialog-improvenments.component.scss
@@ -50,3 +50,12 @@
     color: white;
     padding: 0px 30px 0px 30px;
 }
+
+.generate-replacement {
+    width: 20px;
+    height: 20px;
+    background-color: orangered;
+    border: solid 2px orange;
+    border-radius: 12px;
+    align-self: center;
+}
