--- a/src/app/main/pages/spares/improvements/improvements.component.html
+++ b/src/app/main/pages/spares/improvements/improvements.component.html
@@ -1,15 +1,27 @@
-<div class="container">
-  <div class="header-container">
-    <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 2.5em;">turned_in</mat-icon>
-    <h1 style="font-size: 2.2em; margin-left: 20px; font-family: 'Poppins', sans-serif; font-weight: 700;">Mejoras</h1>
-    <button type="file" aria-label="add" mat-button class="btn-add" (click)="openDialog('create')">
-      <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
+<div class="ms-container">
+  <div class="ms-toolbar">
+    <mat-icon class="ms-toolbar__icon">turned_in</mat-icon>
+    <h1 class="ms-toolbar__title">Mejoras</h1>
+    <button mat-stroked-button class="ms-toolbar__button" (click)="openDialog('create')">
+      <mat-icon>add</mat-icon>
       CREAR
     </button>
+    <mat-form-field appearance="outline" class="ms-toolbar__search">
+      <mat-label>Buscar</mat-label>
+      <mat-icon matPrefix>search</mat-icon>
+      <input matInput type="text" [formControl]="searchControl" placeholder="Escribir..." autocomplete="off">
+    </mat-form-field>
+    <span class="ms-fill"></span>
+    <button mat-stroked-button class="ms-toolbar__button" [routerLink]="['/main/replacements']">
+      <mat-icon>launch</mat-icon>
+      Ir a reemplazos
+    </button>
   </div>
+  <mat-divider></mat-divider>
   <div class="body-container">
     <div *ngIf="improvement$ |async">
-      <table mat-table [dataSource]="improvementDataSource" matSort (matSortChange)="sortData($event)" class="mat-elevation-z8">
+      <table mat-table [dataSource]="improvementDataSource" matSort (matSortChange)="sortData($event)"
+        class="mat-elevation-z8">
 
         <ng-container matColumnDef="date">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha </th>
@@ -42,8 +54,10 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado </th>
           <td mat-cell *matCellDef="let element">
             <button mat-button (click)="showImprovementEntry(element)"
-              [ngClass]="{'btn-state-register': element.state==='registered','btn-state-validate': element.state==='validated'}">
-              {{element.state === 'registered' ? 'Registrado':'Validado'}}
+              [ngClass]="{'btn-state-register': element.state==='registered','btn-state-validate': element.state==='validated','btn-state-replacement': element.state==='replacement'}">
+              <span *ngIf="element.state === 'registered'">Registrado</span>
+              <span *ngIf="element.state === 'replacement'">Reemplazo</span>
+              <span *ngIf="element.state === 'validated'">Validado</span>
             </button>
           </td>
         </ng-container>
@@ -55,9 +69,16 @@
           <td mat-cell *matCellDef="let element; let i = index">
             <ng-container>
               <mat-menu #rawMenu="matMenu">
-                <button class="w3-small" mat-menu-item (click)="openDialog('validate', element, i)">
+                <button class="w3-small" mat-menu-item
+                  *ngIf="element.state==='validated' || element.state==='registered'"
+                  (click)="openDialog('validate', element, i)">
                   <mat-icon>check_circle</mat-icon>
                   Validar
+                </button>
+                <button class="w3-small" mat-menu-item *ngIf="element.state==='replacement'"
+                  (click)="openDialog('replacement', element, i)">
+                  <mat-icon>published_with_changes</mat-icon>
+                  Reemplazo
                 </button>
                 <button class="w3-small" mat-menu-item (click)="openDialog('edit', element, i)">
                   <mat-icon>edit</mat-icon>
