--- a/src/app/main/pages/spares/improvements/improvements.component.scss
+++ b/src/app/main/pages/spares/improvements/improvements.component.scss
@@ -15,7 +15,7 @@
     color: #6200EE;
 }
 .body-container{
-    margin-top: 40px;
+    margin-top: 24px;
 }
 table {
     width: 100%;
@@ -29,4 +29,9 @@ table {
 .btn-state-register{
     background: #F2C94C;  
     color: black;   
+}
+
+.btn-state-replacement{
+    background: #ee4325;  
+    color: white;   
 }
