--- a/src/app/main/pages/spares/replacements/replacements.component.html
+++ b/src/app/main/pages/spares/replacements/replacements.component.html
@@ -1,18 +1,27 @@
-<div class="container">
-    <div class="header-container">
-        <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 2.5em;">published_with_changes</mat-icon>
-        <h1 style="font-size: 2.2em; margin-left: 20px; font-family: 'Poppins', sans-serif; font-weight: 700;">
-            Reemplazos
-        </h1>
-        <button aria-label="add" mat-button class="btn-add" (click)="openDialog('create')">
-            <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
+<div class="ms-container">
+    <div class="ms-toolbar">
+        <mat-icon class="ms-toolbar__icon">published_with_changes</mat-icon>
+        <h1 class="ms-toolbar__title">Reemplazos</h1>
+        <button mat-stroked-button class="ms-toolbar__button" (click)="openDialog('create')">
+            <mat-icon>add</mat-icon>
             CREAR
         </button>
-        <button aria-label="add" mat-button class="btn-add" (click)="openDialog('create-bulk')">
-            <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
-            CREAR LOTE
+        <button mat-stroked-button class="ms-toolbar__button" (click)="openDialog('create-bulk')">
+            <mat-icon>add</mat-icon>
+            LOTE
+        </button>
+        <mat-form-field appearance="outline" class="ms-toolbar__search">
+            <mat-label>Buscar</mat-label>
+            <mat-icon matPrefix>search</mat-icon>
+            <input matInput type="text" [formControl]="searchControl" placeholder="Escribir..." autocomplete="off">
+        </mat-form-field>
+        <span class="ms-fill"></span>
+        <button mat-stroked-button class="ms-toolbar__button" [routerLink]="['/main/improvements']">
+            <mat-icon>launch</mat-icon>
+            Ir a mejoras
         </button>
     </div>
+    <mat-divider></mat-divider>
     <div class="body-container">
         <div *ngIf="replacement$ |async">
             <table mat-table [dataSource]="replacementDataSource" matSort (matSortChange)="sortData($event)"
