--- a/src/assets/css/meraki.scss
+++ b/src/assets/css/meraki.scss
@@ -38,6 +38,7 @@
             padding: 5px 15px 5px 15px;
             height: 50px;
             align-self: center;
+            margin-right: 24px;
 
             &--back {
                 margin-right: 12px;
@@ -62,6 +63,10 @@
 
         &__search .mat-form-field-wrapper {
             padding-bottom: 0px !important;
+            
+            .mat-icon {
+                margin-right: 12px !important;
+            }
         }
     }
 }
@@ -111,6 +116,8 @@
         color: #2b2b2b;
         align-self: center;
         font-family: "Poppins", sans-serif;
+        font-weight: 600;
+        color: #2b2b2b;
         margin: 0px !important;
     }
 
