--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -245,7 +245,7 @@
     </mat-accordion>
 
     <mat-accordion>
-      <mat-expansion-panel>
+      <mat-expansion-panel style="margin-bottom: 10vh;">
         <mat-expansion-panel-header>
           <mat-panel-title>
             <mat-nav-list>
