--- a/src/app/main/pages/quality/analysis/progress/dialogs/analysis-dialog/analysis-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/analysis-dialog/analysis-dialog.component.html
@@ -73,11 +73,32 @@
                         Campo <strong>requerido.</strong>
                     </mat-error>
                 </mat-form-field>
+                
                 <br> 
+                <!-- *ngIf="category$ | async as categories" -->
+                <!-- <mat-form-field  style="margin-bottom: 8px; display: block"
+                    appearance="outline">
+                    <mat-label>Categoria</mat-label>
+                    <input autocomplete="off" formControlName="category" [matAutocomplete]="categoryAutocomplete" type="text"
+                        matInput />
+                    <mat-autocomplete autoActiveFirstOption #categoryAutocomplete="matAutocomplete">
+                        <mat-option (click)="onAddCategory()" [value]="">
+                        <mat-icon>add_circle_outline</mat-icon>Añadir
+                        </mat-option>
+                        <mat-option *ngFor="let category of categories" [value]="category">
+                        {{ category }}
+                        </mat-option>
+                    </mat-autocomplete>
+                    <mat-error>
+                        <span *ngIf="analysisForm.get('category').errors?.required">Por favor, complete el campo.</span>
+                        <span *ngIf="analysisForm.get('category').errors?.invalid">Dato inválido. Complete con alguna opción
+                        válida.</span>
+                    </mat-error>
+                </mat-form-field>
 
                 <div class="container__result">
                     <span class="container__result--result">[ 1 - 4 ]</span>
-                </div>
+                </div> -->
 
             </form>
         </div>
