--- a/src/app/main/pages/quality/analysis/results/results.component.html
+++ b/src/app/main/pages/quality/analysis/results/results.component.html
@@ -1,1 +1,99 @@
-<p>results works!</p>
+<div>
+    <div class>
+
+    </div>
+    <div class="container-body" *ngIf="this.quality$ |async">
+        <!-- <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar> -->
+            <table mat-table [dataSource]="settingsDataSource" >
+
+                <ng-container matColumnDef="date">
+                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Fecha </th>
+                    <td mat-cell *matCellDef="let element" class="table__cell"> 
+                        {{(element.createdAt.seconds * 1000) | date : 'dd/MM/yy'}} 
+                       <span style="color: #979797; font-size: 12px;"> {{(element.createdAt.seconds * 1000) | date : 'hh:mm:ss'}}  </span> 
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="eventType">
+                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Tipo de evento </th>
+                    <td mat-cell *matCellDef="let element" class="table__cell"> {{element.eventType }} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="workOrder">
+                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Orden de trabajo </th>
+                    <td mat-cell *matCellDef="let element" class="table__cell"> {{element.workOrder}} </td>
+                </ng-container>
+                <ng-container matColumnDef="component">
+                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Componente </th>
+                    <td mat-cell *matCellDef="let element" class="table__cell"> {{element.component }} </td>
+                </ng-container>
+                <ng-container matColumnDef="numberPart">
+                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Nro de parte </th>
+                    <td mat-cell *matCellDef="let element" class="table__cell"> {{element.partNumber}} </td>
+                </ng-container>
+                <ng-container matColumnDef="workShop" >
+                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Taller / Op Minera </th>
+                    <td mat-cell *matCellDef="let element" class="table__cell"> {{element.miningOperation}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="specialist">
+                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Especialista </th>
+                    <td mat-cell *matCellDef="let element" align="center" class="table__cell"> {{element.specialist ? element.specialist.name :''}}
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="accCorrective">
+                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader" > Acc. Correctivas </th>
+                    <td mat-cell *matCellDef="let element" class="table__cell"> {{element.correctiveActions }} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="riskLevel">
+                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Nivel de riesgo </th>
+                    <td mat-cell *matCellDef="let element" class="table__cell"> {{element.accCorrective}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="user">
+                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader" > Usuario</th>
+                    <td mat-cell *matCellDef="let element" class="table__cell"> {{element.createdBy.name}} </td>
+                </ng-container>
+
+             <!--    <ng-container matColumnDef="state">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell theader" > Estado </th>
+                    <td mat-cell *matCellDef="let element" class="table__cell"> {{element.state}} </td>
+                </ng-container> -->
+
+                <ng-container matColumnDef="state">
+                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader">Estado</th>
+                    <td mat-cell *matCellDef="let element" class="table__cell">
+                      <button mat-button [ngClass]="{
+                                        'btn-state-registered': element.state==='registered'
+                                       ,'btn-state-progress': element.state==='assigned'
+                                       ,'btn-state-consultation': element.state==='corrective'
+                                       ,'btn-state-finalizado': element.state==='finalized'
+                                      }">
+                        <span *ngIf="element.state==='registered'">Registrado</span>
+                        <span *ngIf="element.state==='assigned'">Proceso</span>
+                        <span *ngIf="element.state==='corrective'">Consulta</span>
+                        <span *ngIf="element.state==='finalized'">Finalizado</span>
+                      </button>
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="actions">
+                    <th mat-header-cell *matHeaderCellDef  class="table__cell theader"> Acciones </th>
+                    <td mat-cell *matCellDef="let element">
+
+                    </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="settingsDisplayedColumns"></tr>
+                <tr mat-row *matRowDef="let element; columns: settingsDisplayedColumns;"></tr>
+
+                <tr class="mat-row" *matNoDataRow>
+                    <td class="mat-cell" colspan="4">No hay ningun dato cargado</td>
+                </tr>
+            </table>
+        <mat-paginator #settingsPaginator [pageSizeOptions]="[5,10,20]"></mat-paginator>
+                        
+    </div>
+</div>
