--- a/src/app/main/pages/evaluations/evaluations-history/dialogs/history-reports-dialog/history-reports-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-history/dialogs/history-reports-dialog/history-reports-dialog.component.html
@@ -3,7 +3,7 @@
         <mat-icon class="ms-dialog-header__icon">description</mat-icon>
         <h3 class="ms-dialog-header__title"> Reporte de evaluaciones</h3>
         <span class="ms-fill"></span>
-        <button mat-icon-button class="ms-dialog-header__close">
+        <button mat-icon-button class="ms-dialog-header__close" mat-dialog-close>
             <mat-icon>cancel</mat-icon>
         </button>
     </div>
