--- a/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.scss
@@ -43,6 +43,12 @@
   width: 100px;
 }
 
+.btn-state-pending {
+  background: #6200ee;
+  color: white;
+  width: 100px;
+}
+
 table {
   .table__cell {
     min-width: 90px;
