--- a/src/app/main/pages/evaluations/evaluations.component.html
+++ b/src/app/main/pages/evaluations/evaluations.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="header-container">
     <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 2.5em;">table_view</mat-icon>
-    <h1 style="font-size: 2.2em; margin-left: 20px; font-family: 'Poppins', sans-serif; font-weight: 700;">Evaluaciones</h1>
+    <h1 style="font-size: 2.2em; margin-left: 20px; font-family: 'Poppins', sans-serif; font-weight: 700;">Pre-evaluaciones</h1>
   </div>
   <div class="container-body">
     <nav mat-tab-nav-bar>
