--- a/src/app/main/pages/quality/analysis/progress/dialogs/analysis-dialog/analysis-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/analysis-dialog/analysis-dialog.component.html
@@ -26,87 +26,219 @@
         <mat-divider style="margin-top:20px; margin-bottom: 20px;"> </mat-divider>
 
         <div class="container">
-            <h3 class="container__title">Analisis</h3>
-            <form [formGroup]="analysisForm" autocomplete="off" class="container__form">
-                  
-                <mat-form-field appearance="outline" id="result" class="container__form--input">
-                    <mat-label>Causante de falla</mat-label>
-                      <input  matInput type="text" placeholder=" Escribir..." formControlName="causeFailure"                         
-                      >
-                    <mat-error *ngIf="analysisForm.controls['causeFailure'].errors">
-                        Campo <strong>requerido.</strong>
-                    </mat-error>
-                </mat-form-field>
-                <br> 
-                <mat-form-field appearance="outline" id="result" class="container__form--input">
-                    <mat-label>Proceso</mat-label>
-                      <input  matInput type="text" placeholder=" Escribir..." formControlName="process"                         
-                      >
-                    <mat-error *ngIf="analysisForm.controls['process'].errors">
-                        Campo <strong>requerido.</strong>
-                    </mat-error>
-                </mat-form-field>
-                <br> 
-                <mat-form-field appearance="outline" id="result" class="container__form--input">
-                    <mat-label> Calidad</mat-label>
-                      <input  matInput type="text" placeholder=" Escribir..." formControlName="quality"                         
-                      >
-                    <mat-error *ngIf="analysisForm.controls['quality'].errors">
-                        Campo <strong>requerido.</strong>
-                    </mat-error>
-                </mat-form-field>
-                <br> 
-                <mat-form-field appearance="outline" id="result" class="container__form--input">
-                    <mat-label>Costo</mat-label>
-                      <input  matInput type="text" placeholder=" Escribir...    " formControlName="cost"                         
-                      >
-                    <mat-error *ngIf="analysisForm.controls['cost'].errors">
-                        Campo <strong>requerido.</strong>
-                    </mat-error>
-                </mat-form-field>
-                <br>
-                <mat-form-field appearance="outline" id="result" class="container__form--input">
-                    <mat-label>Frecuencia</mat-label>
-                      <input  matInput type="text" placeholder=" Escribir...    " formControlName="frequency"                         
-                      >
-                    <mat-error *ngIf="analysisForm.controls['frequency'].errors">
-                        Campo <strong>requerido.</strong>
-                    </mat-error>
-                </mat-form-field>
-                
-                <br> 
-                <!-- *ngIf="category$ | async as categories" -->
-                <!-- <mat-form-field  style="margin-bottom: 8px; display: block"
-                    appearance="outline">
-                    <mat-label>Categoria</mat-label>
-                    <input autocomplete="off" formControlName="category" [matAutocomplete]="categoryAutocomplete" type="text"
-                        matInput />
-                    <mat-autocomplete autoActiveFirstOption #categoryAutocomplete="matAutocomplete">
-                        <mat-option (click)="onAddCategory()" [value]="">
-                        <mat-icon>add_circle_outline</mat-icon>Añadir
-                        </mat-option>
-                        <mat-option *ngFor="let category of categories" [value]="category">
-                        {{ category }}
-                        </mat-option>
-                    </mat-autocomplete>
-                    <mat-error>
-                        <span *ngIf="analysisForm.get('category').errors?.required">Por favor, complete el campo.</span>
-                        <span *ngIf="analysisForm.get('category').errors?.invalid">Dato inválido. Complete con alguna opción
-                        válida.</span>
-                    </mat-error>
-                </mat-form-field>
+            <mat-vertical-stepper [linear]="isLinear" #stepper>
+                <mat-step [stepControl]="firstFormGroup">
+                    <form [formGroup]="analysisForm" autocomplete="off" class="container__form">
+                    <ng-template matStepLabel style="font-weight: bolds;">Analisis</ng-template>
 
-                <div class="container__result">
-                    <span class="container__result--result">[ 1 - 4 ]</span>
-                </div> -->
+                   <!--  <mat-form-field appearance="outline" id="result" class="container__form--input">
+                        <mat-label>Causante de falla</mat-label>
+                          <input  matInput type="text" placeholder=" Escribir..." formControlName="causeFailure"                         
+                          >
+                        <mat-error *ngIf="analysisForm.controls['causeFailure'].errors">
+                            Campo <strong>requerido.</strong>
+                        </mat-error>
+                    </mat-form-field> -->
 
-            </form>
-        </div>
+                    <mat-form-field *ngIf="category$ | async as causeFailuries"  class="container__form--input"
+                        appearance="outline">
+                        <mat-label>Causante de falla</mat-label>
+                        <input autocomplete="off" formControlName="causeFailure" [matAutocomplete]="causeFailureAutocomplete" type="text"
+                            matInput />
+                        <mat-autocomplete autoActiveFirstOption #causeFailureAutocomplete="matAutocomplete">
+                            <mat-option (click)="onAddCauseFailure()" [value]="">
+                            <mat-icon>add_circle_outline</mat-icon>Añadir
+                            </mat-option>
+                            <mat-option *ngFor="let causeFailure of causeFailuries" [value]="causeFailure">
+                            {{ causeFailure }}
+                            </mat-option>
+                        </mat-autocomplete>
+                        <mat-error>
+                            <span *ngIf="analysisForm.get('causeFailure').errors?.required">Por favor, complete el campo.</span>
+                            <span *ngIf="analysisForm.get('causeFailure').errors?.invalid">Dato inválido. Complete con alguna opción
+                            válida.</span>
+                        </mat-error>
+                    </mat-form-field>
+                    <br> 
+                    <!-- <mat-form-field appearance="outline" id="result" class="container__form--input">
+                        <mat-label>Proceso</mat-label>
+                          <input  matInput type="text" placeholder=" Escribir..." formControlName="process"                         
+                          >
+                        <mat-error *ngIf="analysisForm.controls['process'].errors">
+                            Campo <strong>requerido.</strong>
+                        </mat-error>
+                       </mat-form-field> -->
+
+                    <mat-form-field *ngIf="category$ | async as process"  class="container__form--input"
+                        appearance="outline">
+                        <mat-label>Proceso</mat-label>
+                        <input autocomplete="off" formControlName="process" [matAutocomplete]="processAutocomplete" type="text"
+                            matInput />
+                        <mat-autocomplete autoActiveFirstOption #processAutocomplete="matAutocomplete">
+                            <mat-option (click)="onAddProcess()" [value]="">
+                            <mat-icon>add_circle_outline</mat-icon>Añadir
+                            </mat-option>
+                            <mat-option *ngFor="let item of process" [value]="item">
+                            {{ item }}
+                            </mat-option>
+                        </mat-autocomplete>
+                        <mat-error>
+                            <span *ngIf="analysisForm.get('process').errors?.required">Por favor, complete el campo.</span>
+                            <span *ngIf="analysisForm.get('process').errors?.invalid">Dato inválido. Complete con alguna opción
+                            válida.</span>
+                        </mat-error>
+                    </mat-form-field>
+                    <br> 
+                    <mat-form-field appearance="outline" id="result" class="container__form--input">
+                        <mat-label> Calidad</mat-label>
+                          <input  matInput type="text" placeholder=" Escribir..." formControlName="quality"                         
+                          >
+                        <mat-error *ngIf="analysisForm.controls['quality'].errors">
+                            Campo <strong>requerido.</strong>
+                        </mat-error>
+                    </mat-form-field>
+                    <br> 
+                    <mat-form-field appearance="outline" id="result" class="container__form--input">
+                        <mat-label>Costo</mat-label>
+                          <input  matInput type="text" placeholder=" Escribir...    " formControlName="cost"                         
+                          >
+                        <mat-error *ngIf="analysisForm.controls['cost'].errors">
+                            Campo <strong>requerido.</strong>
+                        </mat-error>
+                    </mat-form-field>
+                    <br>
+                    <mat-form-field appearance="outline" id="result" class="container__form--input">
+                        <mat-label>Frecuencia</mat-label>
+                          <input  matInput type="text" placeholder=" Escribir...    " formControlName="frequency"                         
+                          >
+                        <mat-error *ngIf="analysisForm.controls['frequency'].errors">
+                            Campo <strong>requerido.</strong>
+                        </mat-error>
+                    </mat-form-field>
+                    
+                    <br> 
+                    <!--  -->
+                    <mat-form-field *ngIf="category$ | async as categories"  style="margin-bottom: 8px; display: block"
+                        appearance="outline">
+                        <mat-label>Categoria</mat-label>
+                        <input autocomplete="off" formControlName="category" [matAutocomplete]="categoryAutocomplete" type="text"
+                            matInput />
+                        <mat-autocomplete autoActiveFirstOption #categoryAutocomplete="matAutocomplete">
+                            <mat-option (click)="onAddCategory()" [value]="">
+                            <mat-icon>add_circle_outline</mat-icon>Añadir
+                            </mat-option>
+                            <mat-option *ngFor="let category of categories" [value]="category">
+                            {{ category }}
+                            </mat-option>
+                        </mat-autocomplete>
+                        <mat-error>
+                            <span *ngIf="analysisForm.get('category').errors?.required">Por favor, complete el campo.</span>
+                            <span *ngIf="analysisForm.get('category').errors?.invalid">Dato inválido. Complete con alguna opción
+                            válida.</span>
+                        </mat-error>
+                    </mat-form-field>
+    
+                    <div class="container__result">
+                        <span class="container__result--result">[ 1 - 4 ]</span>
+                    </div>
+    
+                </form>
+    
+                </mat-step>
+                <mat-step [stepControl]="secondFormGroup">
+                  <!-- <form [formGroup]="secondFormGroup">
+                    <ng-template matStepLabel>Acciones correctivas</ng-template>
+                    <mat-form-field>
+                      <mat-label>Address</mat-label>
+                      <input matInput formControlName="secondCtrl" placeholder="Ex. 1 Main St, New York, NY"
+                             required>
+                    </mat-form-field>
+                    <div>
+                      <button mat-button matStepperPrevious>Back</button>
+                      <button mat-button matStepperNext>Next</button>
+                    </div>
+                  </form> -->
+                  <form class="form-corrective" [formGroup]="listBahiasForm" autocomplete="off">               
+                    <ng-template matStepLabel>Acciones correctivas</ng-template>
+                    <div formArrayName="bahias" class="bahias">
+                        <div *ngFor="let _ of bahias.controls; let i=index" class="form-corrective__form-array">
+                            <div [formGroupName]="i" class="form-corrective__container">
+                                <mat-form-field appearance="outline"   class="form-corrective__input1">
+                                    <mat-label>Accion correctiva {{i+1}}</mat-label>
+                                    <input matInput placeholder="Escribe..." formControlName="workShop">
+                                    <mat-error *ngIf="bahias.controls[i].get('workShop').errors">
+                                        Campo <strong>requerido.</strong>
+                                    </mat-error>
+                                </mat-form-field>        
+        
+                                <mat-form-field appearance="outline" class="form-corrective__input2">
+                                    <mat-label>Area responsable</mat-label>
+                                    <input matInput type='text' placeholder="Escribe..." formControlName="name">
+                                    <mat-error *ngIf="bahias.controls[i].get('name').errors">
+                                        Campo <strong>requerido.</strong>
+                                    </mat-error>
+                                </mat-form-field>
+        
+                                <button mat-icon-button type="button" style="margin-top: 8px;" class="form-corrective__btn-delete">
+                                    <mat-icon color="warn" (click)="deleteControl(i)">delete</mat-icon>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <button type="button" mat-stroked-button color="primary" class="form-corrective__btn-add" (click)="addControl()">
+                        <mat-icon color="primary">add</mat-icon>
+                        AGREGAR
+                    </button>
+                </form>
+
+                </mat-step>
+                <mat-step>
+                  <ng-template matStepLabel>Reporte</ng-template>
+
+                  <span class="link-text">ZBI_OPS_ORDSER_MQH (11-52-04).xlsx</span>
+                  <br>
+                  <button type="button" mat-stroked-button color="primary" class="form-corrective__btn-add" (click)="addControl()">
+                    <mat-icon color="primary">add</mat-icon>
+                    GENERAR REPORTE
+                </button>
+                </mat-step>
+            </mat-vertical-stepper>
+
+            <h3>Lista de difusion</h3>
+            <mat-form-field  *ngIf="filteredBroadcast$ | async as broadcasts"    appearance="outline" id="result" class="chip-form-input">                     
+                <mat-label>Enviar a</mat-label>
+                <mat-chip-list #chipList aria-label="Fruit selection">
+                  <mat-chip
+                    *ngFor="let email of emailArray"
+                    [selectable]="selectable"
+                    [removable]="removable"
+                    (removed)="removeEmail(email)">
+                    {{email}}
+                    <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                  </mat-chip>
+                  <input
+                    placeholder="agregar nueva lista de difusion..."
+                    #fruitInput
+                    [formControl]="broadcastControl"
+                    [matAutocomplete]="auto"
+                    [matChipInputFor]="chipList"
+                    [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                    (matChipInputTokenEnd)="addBroadcast($event)">
+                </mat-chip-list>
+                <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selectedBroadcast($event)">
+                  <mat-option *ngFor="let broadcast of broadcasts" [value]="broadcast">
+                    {{broadcast.name}}
+                  </mat-option>
+                </mat-autocomplete>
+            </mat-form-field>        
+            
+        </div>        
          
     </mat-dialog-content>
     <mat-dialog-actions align="end">
         <button mat-stroked-button color="warn" mat-dialog-close [disabled]="loading$ | async">CANCELAR</button>
         <button mat-stroked-button color="primary" (click)="save()" [disabled]="loading$ | async">GUARDAR</button>
+        <button mat-stroked-button color="primary" (click)="save()" [disabled]="loading$ | async">ENVIAR</button>
     </mat-dialog-actions>
    
 </div>
