--- a/src/app/main/pages/quality/analysis/progress/dialogs/analysis-dialog/analysis-dialog.component.scss
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/analysis-dialog/analysis-dialog.component.scss
@@ -1,4 +1,9 @@
 
+.step-title{
+    font-size: 1.3em;
+    font-weight: bold;
+}
+
 .container{
     &__form{
         &--input{
@@ -23,8 +28,33 @@
             padding: 10px 80px 10px 80px;
             font-size: 1.5em;
             font-weight: bold;
-
         }
     }
+}
 
+.form-corrective{
+
+    &__input1{
+        width: 260px;
+        margin-right: 15px; 
+    }
+    &__input2{
+        width: 160px;
+        margin-right: 15px;
+    }
+    &__btn-add{
+        margin-top: 15px;
+    }
+
+    &__btn-delete{
+
+    }
+}
+
+.link-text{
+    color: #0064EA;
+}
+
+.chip-form-input{
+    width: 550px;
 }
