:bug: Fix spare parts uploading, match and color for matches

--- a/src/app/main/pages/spares/spare-parts/spare-parts.component.scss
+++ b/src/app/main/pages/spares/spare-parts/spare-parts.component.scss
@@ -49,3 +49,10 @@
     padding: 1rem;
     border-radius: 10px 10px;
 }
+
+.match {
+    background: greenyellow;
+    padding: 4px;
+    font-weight: 700;
+    border-radius: 2px;
+}
