--- a/src/app/main/pages/initial-evaluations/init-eval-reports/init-eval-reports.component.html
+++ b/src/app/main/pages/initial-evaluations/init-eval-reports/init-eval-reports.component.html
@@ -8,7 +8,7 @@
             <mat-icon>add</mat-icon>
             <span>GENERAR RECEPCIÓN</span>
         </button>
-        <mat-form-field appearance="outline" class="ms-toolbar__search">
+        <mat-form-field appearance="outline" class="ms-toolbar__search" [ngClass]="isMobile ? 'ms-toolbar__search--mobile' : 'ms-toolbar__search--desktop'">
             <mat-label>Buscar</mat-label>
             <mat-icon matPrefix>search</mat-icon>
             <input matInput type="text" [formControl]="searchControl" placeholder="Buscar OT" autocomplete="off">
