--- a/src/app/main/pages/spares/spare-parts/spare-parts.component.html
+++ b/src/app/main/pages/spares/spare-parts/spare-parts.component.html
@@ -1,12 +1,12 @@
 <div class="container">
     <div class="header-container">
         <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 2.5em;">verified</mat-icon>
-        <h1 style="font-size: 2.2em; margin-left: 20px; font-family: 'Poppins', sans-serif; font-weight: 700;">Revisión de repuestos</h1>
+        <h1 style="font-size: 2.2em; margin-left: 20px; font-family: 'Poppins', sans-serif; font-weight: 700;">Revisión
+            de repuestos</h1>
 
         <input #fileInput2 style="display: none" type="file" (change)=" onFileSelected($event)" accept=".csv"
             id="fileInput2">
-        <button type="file" aria-label="add" mat-button class="btn-add" accept=".csv"
-            (click)="fileInput2.click()">
+        <button type="file" aria-label="add" mat-button class="btn-add" accept=".csv" (click)="fileInput2.click()">
             <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
             ADJUNTAR SIS
         </button>
@@ -14,31 +14,33 @@
     <div class="body-container">
         <h4 style="font-weight: bold;">Lista de partes</h4>
         <ng-container *ngIf="checkedParts$ | async; else default">
-            <form  *ngFor="let item of dataSparePart; let i=index">
+            <form *ngFor="let item of dataSparePart; let i=index">
                 <div class="container-form-array">
                     <!-- [formGroupName]="i" -->
                     <mat-form-field appearance="outline" style="width: 280px;" class="container-form-array__inputs">
                         <mat-label>Nombre</mat-label>
-                        <input matInput placeholder="Label" [ngModel]="item.description" name="description">
+                        <input matInput placeholder="Label" [ngModel]="item.description" name="description" readonly>
                         <!--  <mat-icon matSuffix>settings</mat-icon> -->
                     </mat-form-field>
                     <mat-form-field appearance="outline" style="width: 100px;" class="container-form-array__inputs">
                         <mat-label>Cantidad</mat-label>
-                        <input matInput placeholder="Cantidad" [ngModel]="item.quantity" name='quantity'>
+                        <input matInput placeholder="Cantidad" [ngModel]="item.quantity" name='quantity' readonly>
                     </mat-form-field>
                     <mat-form-field appearance="outline" style="width: 280px;" class="container-form-array__inputs">
                         <mat-label>Nº de parte</mat-label>
-                        <input matInput placeholder="Nº de parte actual" [ngModel]="item.improvedPart" name="improvedPart">
+                        <input matInput placeholder="Nº de parte actual" [ngModel]="item.improvedPart"
+                            name="improvedPart" readonly>
                     </mat-form-field>
                     <mat-form-field appearance="outline" style="width: 280px;" class="container-form-array__inputs">
                         <mat-label>Nº de parte disponible</mat-label>
                         <input matInput placeholder="Nº de parte mejorada" [ngModel]="item.evaluatedPart"
-                            name="evaluatedPart">
+                            name="evaluatedPart" [ngClass]="item.match ? 'match' : ''" readonly>
                     </mat-form-field>
 
                     <div class="container-form-array__checked">
                         <span>Kit</span>
-                        <mat-checkbox class="checked-margin" color="primary" [ngModel]="item.kit" value="checked" name="kit">
+                        <mat-checkbox class="checked-margin" color="primary" [ngModel]="item.kit" value="checked"
+                            name="kit" disabled>
                         </mat-checkbox>
                         <p *ngIf="item.kit" style="color: red; font-weight: bold;">Eliminado</p>
                     </div>
@@ -55,7 +57,8 @@
         </ng-template>
     </div>
     <div class="footer">
-        <button aria-label="add" mat-button class="footer__btn-save" (click)="downloadXls()" [disabled]="dataSparePart.length < 1">
+        <button aria-label="add" mat-button class="footer__btn-save" (click)="downloadXls()"
+            [disabled]="dataSparePart.length < 1">
             DESCARGAR
         </button>
     </div>
