--- a/src/assets/css/meraki.scss
+++ b/src/assets/css/meraki.scss
@@ -27,9 +27,17 @@
             color: #2b2b2b;
             align-self: center;
             font-family: "Poppins", sans-serif;
-            font-size: 2rem;
+
             font-weight: 900;
             margin: 0px 24px 0px 0px;
+
+            &--desktop {
+                font-size: 2rem;
+            }
+
+            &--mobile {
+                font-size: 1.6rem;
+            }
         }
 
         &__button {
@@ -63,9 +71,16 @@
 
         &__search .mat-form-field-wrapper {
             padding-bottom: 0px !important;
-            
+
             .mat-icon {
                 margin-right: 12px !important;
+            }
+
+            &--mobile {
+                .mat-form-field {
+                    width: 100% !important;
+                    margin: 12px 0px 0px 0px !important;
+                }
             }
         }
     }
@@ -104,7 +119,7 @@
 .ms-dialog-header {
     display: flex;
     align-items: stretch;
-    margin-bottom: 10PX;
+    margin-bottom: 10px;
 
     &__icon {
         color: #2b2b2b;
