--- a/src/app/main/pages/spares/spare-parts/spare-parts.component.scss
+++ b/src/app/main/pages/spares/spare-parts/spare-parts.component.scss
@@ -56,3 +56,24 @@
     font-weight: 700;
     border-radius: 2px;
 }
+
+.single-query {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 24px;
+
+    .checked-part {
+        padding: 12px;
+        border: solid 1px lightgray;
+        border-radius: 5px;
+        color: #2b2b2b;
+        margin-right: 12px;
+    }
+
+    .result-part {
+        padding: 12px;
+        border: solid 1px lightgray;
+        border-radius: 5px;
+        color: #2b2b2b;
+    }
+}
