--- a/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.html
+++ b/src/app/main/pages/evaluations/evaluations-history/evaluations-history.component.html
@@ -156,7 +156,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="table__cell">Inspector</th>
         <td mat-cell *matCellDef="let element" class="table__cell"> {{element.createdBy ? (element.createdBy.name ?
           element.createdBy.name : element.createdBy) :
-          '---'}} </td>
+          'Sin asignar'}} </td>
       </ng-container>
 
       <ng-container matColumnDef="processDate">
