--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-time-line-dialog/evaluations-time-line-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-time-line-dialog/evaluations-time-line-dialog.component.html
@@ -20,8 +20,9 @@
             <p><span style="font-weight: bold;"> Cantidad :</span> {{data.quantity ? data.quantity : ''}}</p>
             <p><span style="font-weight: bold;"> Descripcion :</span> {{data.description ? data.description : ''}}</p>
             <p><span style="font-weight: bold;"> Tipo de Atencion :</span> {{data.status ? data.status : ''}}</p>
-            <p><span style="font-weight: bold;"> Usuario :</span> {{data.createdBy.name ? data.createdBy.name : (data.createdBy ? data.createdBy : '')}} </p>
-            <p><span style="font-weight: bold;"> WOF  :</span> {{data.wof ? data.wof : ''}}</p>
+            <p><span style="font-weight: bold;"> Usuario :</span> {{data.createdBy ? (data.createdBy.name ?
+                data.createdBy.name : data.createdBy) : 'Sin asignar'}} </p>
+            <p><span style="font-weight: bold;"> WOF :</span> {{data.wof ? data.wof : ''}}</p>
             <p><span style="font-weight: bold;"> Trabajo :</span> {{data.task ? data.task : ''}}</p>
             <p><span style="font-weight: bold;"> Observaciones :</span> {{data.observations ? data.observations : ''}}
             </p>
